ver 0.23.8 (not yet released)
* storage
  - curl: fix crash if web server does not understand WebDAV
* input
  - cdio_paranoia: fix crash if no drive was found
  - cdio_paranoia: faster cancellation
  - cdio_paranoia: don't scan for replay gain tags
* mixer
  - better error messages
  - alsa: fix setting volume before playback starts
  - pipewire: fix crash bug
  - pipewire: fix volume change events with PipeWire 0.3.53
  - pipewire: don't force initial volume=100%
* support libfmt 9

ver 0.23.7 (2022/05/09)
* database
  - upnp: support pupnp 1.14
* decoder
  - ffmpeg: fix HLS seeking
  - opus: fix missing song length on high-latency files
* output
  - shout: require at least libshout 2.4.0
* mixer
  - pipewire: fix volume restore
  - software: update volume of disabled outputs
* support libiconv

ver 0.23.6 (2022/03/14)
* protocol
  - support filename "cover.webp" for "albumart" command
  - support "readcomments" and "readpicture" on CUE tracks
* decoder
  - ffmpeg: fix end-of-file check (update stuck at empty files)
  - opus: fix "readpicture" on Opus files
* output
  - pipewire: fix crash bug if setting volume before playback starts
  - wasapi: fix resume after pause

ver 0.23.5 (2021/12/01)
* protocol
  - support relative offsets for "searchadd"
  - fix "searchaddpl" bug (bogus error "Bad position")
* database
  - upnp: fix crash bug
* tags
  - fix MixRamp support
* migrate to PCRE2
* GCC 12 build fixes

ver 0.23.4 (2021/11/11)
* protocol
  - add optional position parameter to "searchaddpl"
* decoder
  - ffmpeg: support libavcodec 59
* output
  - alsa: add option "thesycon_dsd_workaround" to work around device bug
* fix crash on debug builds if startup fails
* systemd
  - remove "RuntimeDirectory" directive because it caused problems
  - ignore the "pid_file" setting if started as systemd service
* Windows
  - enable the "openmpt" decoder plugin

ver 0.23.3 (2021/10/31)
* protocol
  - add optional position parameter to "add" and "playlistadd"